# NFT_Patents_Solana

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  FAQ_SOLANA.md  MAINNET_DEPLOYMENT_ROADMAP.md  MAINNET_READINESS_CHECKLIST.md  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_AUDIT_REPORT.md  SECURITY_BEST_PRACTICES.md  SECURITY_FIXES_SUMMARY.md  SECURITY_QUICK_REFERENCE.md  SETUP_AND_TESTING.md  TEACHME.md  TROUBLESHOOTING.md  UPDATES_FROM_ETHEREUM.md  VERIFICATION_CHECKLIST.md  package.json  solana_project_quiz.py  tsconfig.json
app/: sdk.ts
programs/nft-marketplace/: Cargo.toml
programs/nft-marketplace/src/: lib.rs
programs/patent-nft/: Cargo.toml
programs/patent-nft/src/: lib.rs
programs/psp-token/: Cargo.toml
programs/psp-token/src/: lib.rs
programs/search-payment/: Cargo.toml
programs/search-payment/src/: lib.rs
tests/: patent-nft.ts
