[workspace]
members = [
    "programs/patent-nft",
    "programs/psp-token",
    "programs/nft-marketplace",
    "programs/search-payment"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

