[package]
name = "patent-nft"
version = "0.1.0"
description = "Solana program for minting unique Patent NFTs using Metaplex"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "patent_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "4.1.2"
solana-program = "1.17.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

